--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.datasource.username = root
 spring.datasource.password = 123456
 
 # Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
 
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
+
