--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.password = 123456
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
+#在不重启容器的情况下重新加载FreeMarker模板
+spring.freemarker.cache = false
