--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,9 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.tautua.markdownpapers</groupId>
+            <artifactId>markdownpapers-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
