--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 #在不重启容器的情况下重新加载FreeMarker模板
 spring.freemarker.cache = false
+
+spring.mvc.favicon.enabled = false
